--- a/Exercice_2/styles/style.css
+++ b/Exercice_2/styles/style.css
@@ -1,22 +1,64 @@
 @charset "utf-8";
 /*CSS Document */
 
+:root{
+	--clr-light: #9aff99;
+	--clr-dark: #34ff34;
+	--clr-light_2: #ffce93;
+	--clr-dark_2: #fe0000;
+	--ff-primary: Arial, Helvetica, sans-serif;
+	--ff-secondary: Impact, Charcoal, sans-serif;
+}
+
 	body {
-		font-family: Arial, Helvetica, sans-serif;
-		}
+		font-family: var(--ff-primary);
+	}
 		
 	table{
 		border: 2px solid black;
 	}
-	table.plus{
-		border: 2px solid gold;
-		border-style: dotted;
-	}
-	th.plus, td.plus {
-		border-bottom: 1px solid #ddd;
-	}
-	table.moins{
-		border: 2px solid black;
-		border-style: dotted;
+	
+	.tableau-facture  {
+		border-collapse:collapse;
+		border-spacing:0;
 	}
 	
+	.tableau-facture td {
+		border-color:black;
+		border-style:solid;
+		border-width:1px;
+		font-size:14px;
+		overflow:hidden;
+		padding:10px 5px;
+		word-break:normal;
+		text-align:center;
+		vertical-align:top;
+	 }
+	 
+	 .tableau-facture .titre {
+		 font-weight: bold;
+		 font-size: 20px;
+	 }
+	
+	.moins .titre, .titre-message {
+		background-color: var(--clr-dark);
+	}
+	
+	.moins {
+		background-color: var(--clr-light); 
+	}
+	
+	.plus .titre, .titre-message {
+		background-color: var(--clr-dark_2);
+		font-style: italic; 
+		
+	}
+	
+	.plus {
+		background-color: var(--clr-light_2); 
+		font-family: var(--ff-secondary); 
+	}
+	
+	.plus {
+		border: 3px dotted black; 
+	}
